# mf2000

./: .gitignore  README.md  meson.build  pixi.toml
.github/workflows/: ci.yml
src/: gwf1mnw2.f  gwf1swt1.f  meson.build
