sources = files(
  'ccfd.c',
  'ctime.f',
  'daf1.f',
  'mhc1.f90',
  'para-non.f',
  'de45.f',
  'glo1bas6.f',
  'gmg1.f',
  'gutsdaf.f',
  'gwf1bas6.f',
  'gwf1bcf6.f',
  'gwf1chd6.f',
  'gwf1drn6.f',
  'gwf1drt1.f',
  'gwf1ets1.f',
  'gwf1evt6.f',
  'gwf1fhb1.f',
  'gwf1gag5.f',
  'gwf1ghb6.f',
  'gwf1hfb6.f',
  'gwf1huf2.f',
  'gwf1ibs6.f',
  'gwf1lak3.f',
  'gwf1lpf1.f',
  'gwf1mnw1.f',
  'gwf1mnw2.f',
  'gwf1mnwi.f',
  'gwf1rch6.f',
  'gwf1res1.f',
  'gwf1riv6.f',
  'gwf1sfr2.f',
  'gwf1str6.f',
  'gwf1sub1.f',
  'gwf1swt1.f',
  'gwf1wel6.f',
  'hufutl2.f',
  'hydmod.f',
  'lmg1.f',
  'lmt6.f',
  'memchk.f',
  'mf2k.f',
  'mf2kgmg.c',
  'obs1adv2.f',
  'obs1bas6.f',
  'obs1drn6.f',
  'obs1drt1.f',
  'obs1ghb6.f',
  'obs1riv6.f',
  'obs1str6.f',
  'parutl1.f',
  'pcg2.f',
  'pes1bas6.f',
  'pes1gau1.f',
  'r_vector.c',
  'rtedaf.f',
  'sen1bas6.f',
  'sen1chd6.f',
  'sen1drn6.f',
  'sen1drt1.f',
  'sen1ets1.f',
  'sen1evt6.f',
  'sen1ghb6.f',
  'sen1hfb6.f',
  'sen1huf2.f',
  'sen1lpf1.f',
  'sen1rch6.f',
  'sen1riv6.f',
  'sen1str6.f',
  'sen1wel6.f',
  'sip5.f',
  'solvers.c',
  'sor5.f',
  'utl6.f',
)

exe = executable(
                 'mf2000',
                 sources,
                 dependencies: extra_deps,
                 install: true
                )
